--- a/k-NN_analysis.ipynb
+++ b/k-NN_analysis.ipynb
@@ -310,7 +310,7 @@
     "\n",
     "You will produce something like this as a basis for your analysis:\n",
     "\n",
-    "![Example plot](https://people.cs.umu.se/tkampik/docs/example_plot.png)"
+    "![Example plot](https://raw.githubusercontent.com/TimKam/knn-assignment/master/example_plot.png)"
    ]
   },
   {
